@startuml

title "Class Diagram"

class Customer {
  payment information
}

class RepairCrew {
  salary information
}

class User {
  name
  address
}

class Scooter {
  location
  charge
  miles per percent
  pence per minute
  status
}

class Trip {
  payment status
}

class Issue {
  resolved
  markAsResolved()
}

Customer "1" -- "*" Trip : goes on
Customer "1" -- "*" Issue : creates
Trip "*" -- "1" Scooter : participates
Issue "*" -- "1" Scooter : has
RepairCrew "1" -- "*" Issue : is assigned to
User <|-- Customer
User <|-- RepairCrew

@enduml